# markdown-heritage

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: instagram-scraping-research.md
src/markdown_frontmatterer/: __init__.py  cli.py  collect_models.py  collect_writer.py  collector.py  config.py  frontmatter_io.py  i18n.py  llm.py  models.py  processor.py  prompts.py  query.py  query_models.py  query_prompts.py  scanner.py
tests/: conftest.py  test_frontmatter_io.py  test_llm.py  test_models.py  test_scanner.py
tests/fixtures/: sample_journal.md  sample_no_frontmatter.md  sample_with_frontmatter.md
