[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "markdown-frontmatterer"
version = "0.1.0"
description = "AI-powered YAML frontmatter generator for Markdown files"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9.0",
    "python-frontmatter>=1.1.0",
    "httpx>=0.27.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "rich>=13.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.4",
]

[project.scripts]
mdh = "markdown_frontmatterer.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/markdown_frontmatterer"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
